--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/jammythedreamer/express_starter#readme",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "express": "^4.17.2",
     "knex": "^1.0.4",
     "mysql": "^2.18.1",
-    "redis": "^4.0.6"
+    "redis": "^4.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
